--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -40,7 +40,7 @@ usually it's technical or even theoretical.
 - [Publishing Gatsby starters from a monorepo](/publishing-gatsby-starters-from-monorepo)
 - [Building a beautiful, reusable button with Styled System](/styled-system-button)
 
-<div style={{ marginTop: '100px' }} />
+---
 
-[See all posts &rarr;](/writing/archives) <br />
-[See posts by tag &rarr;](/writing/tags)
+- [See all posts &rarr;](/writing/archives)
+- [See posts by tag &rarr;](/writing/tags)
