Remove posts by tag for now

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -42,5 +42,4 @@ usually it's technical or even theoretical.
 
 ---
 
-- [See all posts &rarr;](/writing/archives)
-- [See posts by tag &rarr;](/writing/tags)
+[See all posts &rarr;](/writing/archives)
