Add compilers for humans

--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -15,3 +15,4 @@ I've worked on (on the side).
 | Unified Collective | 2018 | Non-profit organization for unified projects | Actively developing and maintaining |
 | Components AI | 2019 | Generative and parametric tools for design and web development | Working on it full time (starting September 2020) |
 | Blocks | 2019 | JSX-based page builder for visually manipulating JSX source code | Paused in 2020 |
+| Compilers for Humans | 2019 | A course on compilers for web developers | Building/writing |
