Add more things

--- a/content/posts/vim-2.mdx
+++ b/content/posts/vim-2.mdx
@@ -7,7 +7,9 @@ tags:
   - dev
 ---
 
-- `CTRL+O`
-- `CTRL+I`
-- `g;`
-- `g,`
+- `CTRL+O`: Move backward through jump list
+- `CTRL+I`: Move forward through jump list
+- `g;`: Move backward through the change list
+- `g,`: Move forward through the change list
+- `:only`: Write and close all windows but the current
+- `CTRL+W` + `H`/`J`/`K`/`L`: Move window in the direction
