--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -5,9 +5,16 @@
 
 <br />
 
+## Components AI
+
+Co-founder, _July 2019 - Present_
+
+Building parametric and generative design tools for the
+web and other platforms.
+
 ## Gatsby
 
-Staff Software Engineer, _January 2019 - Present_
+Staff Software Engineer, _January 2019 - August 2020_
 
 Working on MDX core, `gatsby-plugin-mdx`, Gatsby Themes,
 and Theme UI in order to help pioneer a new era of web
