A bit of cleanup, improve iframe

--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -11,8 +11,8 @@ I've worked on (on the side).
 | Tachyons | 2015 | OSS CSS and design system framework | Maintaining |
 | Uptime Umbrella | 2016 | Uptime monitor for web properties | Shut down in 2017 |
 | Compositor | 2016 | Modern tools for designers & developers | Shut down in 2018 |
-| MDX | 2017 | OSS format for using JSX and components in your Markdown | Actively developing and maintaining |
+| **MDX** | 2017 | OSS format for using JSX and components in your Markdown | Actively developing and maintaining |
 | Unified Collective | 2018 | Non-profit organization for unified projects | Actively developing and maintaining |
-| Components AI | 2019 | Generative and parametric tools for design and web development | Working on it full time (starting September 2020) |
+| **Components AI** | 2019 | **Generative and parametric tools for design and web development** | Working on it full time (starting September 2020) |
 | Blocks | 2019 | JSX-based page builder for visually manipulating JSX source code | Paused in 2020 |
 | Compilers for Humans | 2019 | A course on compilers for web developers | Building/writing |
