--- a/src/posts/create-a-table-of-contents-component-for-mdx-in-gatsby.mdx
+++ b/src/posts/create-a-table-of-contents-component-for-mdx-in-gatsby.mdx
@@ -8,7 +8,7 @@ tags:
   - egghead
 ---
 
-<ResponsiveIframe src="https://egghead.io/lessons/react-create-a-table-of-contents-component-for-mdx-documents-in-gatsby/embed" />
+<Iframe src="https://egghead.io/lessons/react-create-a-table-of-contents-component-for-mdx-documents-in-gatsby/embed" />
 
 With MDX it's preferable to use composition over plugins whenever possible. When you're using MDX with a Gatsby site it's pretty straightforward to use a component. `gatsby-plugin-mdx` will automatically add a headings field when it processes a document so you can query it and pass that along to a component.
 
