Add some missing OSS

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -7,7 +7,7 @@
 
 ## Components AI
 
-Co-founder, _July 2019 - Present_
+Co-founder and CTO, _July 2019 - Present_
 
 Building parametric and generative design tools for the
 web and other platforms.
@@ -16,9 +16,9 @@ web and other platforms.
 
 Staff Software Engineer, _January 2019 - August 2020_
 
-Working on MDX core, `gatsby-plugin-mdx`, Gatsby Themes,
-and Theme UI in order to help pioneer a new era of web
-development. Primary technologies are React/GraphQL/Node.
+Working on MDX, Blocks, `gatsby-plugin-mdx`, Gatsby Themes,
+Gatsby Recipes, and Theme UI in order to help pioneer a new era of web
+development.
 
 <br />
 
@@ -37,10 +37,9 @@ marketing pages, and front end architecture.
 Senior Software Engineer, _March 2014 - November 2016_
 
 Responsible for developing and designing cloud configuration
-infrastructure for network appliances, including web apps,
-API design, and asset optimization. Built a design system.
-Primary technologies were Ruby on Rails, CSS(Bootstrap/Tachyons),
-and JavaScript(Ember).
+and licensing infrastructure for network appliances, including web apps,
+API design, and asset optimization. Often tasked with building
+prototypes and proofs of concept. Built a design system.
 
 <br />
 
@@ -52,7 +51,6 @@ Responsible for developing and designing a cloud-based dashboard
 for network configuration and usage analytics. Leading the design
 of all aspects of the web application and homepage, while being
 an integral component of the development of the entire stack.
-Primary technology was Ruby on Rails.
 
 <br />
 
@@ -61,6 +59,15 @@ Primary technology was Ruby on Rails.
 - **Freelance Web Design/Development (_Summer 2010 - Summer 2012_)**
 - **Computers Unlimited, Software Engineering Intern (_Summer 2009_)**
 - **Hauser Architects, Web Developer Intern (_Summer 2007_)**
+
+<br />
+
+## Notable open-source projects
+
+- Creator of [MDX](https://mdxjs.com)
+- Creator of [Blocks](https://blocks-ui.com)
+- Co-creator of [Tachyons](https://tachyons.io)
+- Contributor to [CSS Stats](https://cssstats.com)
 
 <br />
 
