Add ctrlp + ctrlx split shortcut

--- a/src/posts/vim-3.mdx
+++ b/src/posts/vim-3.mdx
@@ -16,3 +16,4 @@ tags:
 - `CTRL+V` for visual block mode, hjkl to navigate
 - `:g/\[x\]/norm ddGp` for all lines that match the pattern, delete line, jump to bottom of page, then paste
 - `:v/\[x\]/norm ddGp` for all lines that don't match the pattern, delete line, jump to bottom of page, then paste
+- `CTRL+x` when using ctrlp will open the file in a split
