Add looping over directories example

--- a/src/posts/bash-loop.mdx
+++ b/src/posts/bash-loop.mdx
@@ -29,6 +29,16 @@ do
 done
 ```
 
+### Looping over directories
+
+```sh
+#!/bin/bash
+for dir in some/path/*/
+do
+  echo $dir
+done
+```
+
 ## Infinite while loop
 
 If you want to repeatedly run a script or command you
